Finished slides. Still have to add handson

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -191,11 +191,34 @@ path / {
           </table>
         </section>
       </section>
+
+
       <section>
         <section>
           <h2>Hosting<br><small>Demo</small></h2>
         </section>
+        <section>
+          <h3>Other Fancy Subjects</h3>
+        </section>
+        <section>
+          <h3>Cloud Storage</h3>
+        </section>
+        <section>
+          <h3>Firebase Cloud Messaging (iOS / Android)</h3>
+        </section>
+        <section>
+          <h3>Test Lab (Android)</h3>
+          <img src="images/devices.png">
+        </section>
+        <section>
+          <h3>Crash Reporting (iOS / Android)</h3>
+        </section>
+        <section>
+          <h3>Customize your app on the fly<br> (iOS, Android)</h3>
+          <iframe width="408" height="229" src="https://www.youtube.com/embed/_CXXVFPO6f0" frameborder="0" allowfullscreen></iframe>
+        </section>
       </section>
+
     </div>
   </div>
 
