Finished presentation ish

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -45,6 +45,7 @@
       <section>
         <section>
           <h2>What is it?</h2>
+          <img src="images/blackhole.jpg" width="450">
         </section>
         <section>
           <h2>Demo</h2>
@@ -84,6 +85,7 @@
       <section>
         <section>
           <h3>Write</h3>
+          <img src="images/save.jpg" width="450">
         </section>
         <section>
           <h3>Config</h3>
@@ -109,6 +111,7 @@
       <section>
         <section>
           <h3>Read</h3>
+          <img src="images/read.jpg" width="450">
         </section>
         <section>
           <h3>Value</h3>
@@ -128,6 +131,7 @@
           <pre data-snippet-type="js" data-snippet="javascript/on_once.jsx"></pre>
         </section>
         <section>
+          <h3>Other R/W operations</h3>
           <ul>
             <li class="fragment">Transaction</li>
             <li class="fragment">Limit to first/last n items</li>
@@ -204,21 +208,79 @@ path / {
           <h3>Cloud Storage</h3>
         </section>
         <section>
-          <h3>Firebase Cloud Messaging (iOS / Android)</h3>
+          <h3>Firebase Cloud Messaging<br>(iOS / Android)</h3>
         </section>
         <section>
-          <h3>Test Lab (Android)</h3>
+          <h3>Test Lab<br>(Android)</h3>
           <img src="images/devices.png">
         </section>
         <section>
-          <h3>Crash Reporting (iOS / Android)</h3>
+          <h3>Crash Reporting<br>(iOS / Android)</h3>
         </section>
         <section>
-          <h3>Customize your app on the fly<br> (iOS, Android)</h3>
+          <h3>Customize your app on the fly<br>(iOS, Android)</h3>
           <iframe width="408" height="229" src="https://www.youtube.com/embed/_CXXVFPO6f0" frameborder="0" allowfullscreen></iframe>
         </section>
       </section>
 
+
+      <section>
+        <section>
+          <h2>Side Notes</h2>
+          <img src="images/notes.jpg">
+        </section>
+        <section>
+          <h3>The model is different</h3>
+          <img src="images/different.png">
+        </section>
+        <section>
+          <h3>It is not that young</h3>
+          <img src="images/young.jpg">
+        </section>
+        <section>
+          <h3>Integrations</h3>
+          <p>Angular, ReactJS, Android (Java), iOS</p>
+        </section>
+        <section>
+          <h3>Just updated</h3>
+          <img src="images/1up.jpg">
+        </section>
+        <section>
+          <h3>There is no backend</h3>
+          <p>
+            Demo
+          </p>
+        </section>
+      </section>
+
+      <section>
+        <section>
+          <h2>Workshop</h2>
+          <table>
+            <tr>
+              <td style="width: 50%">
+                <h3>Technical</h3>
+                <ul style="font-size: 70%">
+                  <li>Task list</li>
+                  <li>Chat app</li>
+                  <li>File storage / Image upload</li>
+                  <li>Setup your own hosting</li>
+                </ul>
+              </td>
+
+              <td style="width: 50%">
+                <h3>Analyze</h3>
+                <ul style="font-size: 70%">
+                  <li>How/where can we use Firebase in our project?</li>
+                  <li>What parts of my application are not portable to Firebase?</li>
+                  <li>Can we encode the security rules that we have in our own project?</li>
+                </ul>
+              </td>
+            </tr>
+          </table>
+
+        </section>
+      </section>
     </div>
   </div>
 
