Fix for typo and add testability slide

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -67,7 +67,7 @@
             <li class="fragment">Hosting</li>
             <li class="fragment">Storage</li>
             <li class="fragment">Cloud Messaging</li>
-            <li class="fragment">Custumize your app on the fly</li>
+            <li class="fragment">Customize your app on the fly</li>
             <li class="fragment">Test lab</li>
             <li class="fragment">Crash Reporting</li>
           </ul>
@@ -251,6 +251,13 @@ path / {
             Demo
           </p>
         </section>
+        <section>
+          <h3>Testability</h3>
+        </section>
+      </section>
+
+      <section>
+        <h3>Questions?</h3>
       </section>
 
       <section>
